# pnpm

./: .cirrus.yml  .coderabbit.yaml  .editorconfig  .eslintcache  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  .pnpmfile.cjs  .pr_agent.toml  .prettierrc.js  .taplo.toml  .travis.yml  .typos.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  HISTORY.md  Jenkinsfile  LICENSE  NATIVE_BINARY_DEPS_PLAN.md  PR.md  README.md  REVIEW-2026-04-29T10:22:18+07:00.md  REVIEW_GUIDE.md  RFC.md  SECURITY.md  TODO  appveyor.yml  azure-pipelines-template.yml  azure-pipelines.yml  babel.config.json  bootstrap.sh  commitlint.config.js  cspell.json  (+46 more)
agent/cafs-writer/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
agent/cafs-writer/bench/: compare.js
agent/cafs-writer/scripts/: copy-artifact.js
agent/cafs-writer/src/: lib.rs
pacquet/crates/auth-commands/: Cargo.toml
pacquet/crates/auth-commands/src/: ini.rs  lib.rs  login.rs  logout.rs  registry_url.rs
pacquet/crates/catalogs-config/: Cargo.toml
pacquet/crates/catalogs-config/src/: lib.rs  tests.rs
pacquet/crates/catalogs-resolver/: Cargo.toml
pacquet/crates/catalogs-resolver/src/: lib.rs  tests.rs
pacquet/crates/cli/: Cargo.toml  README.md
pacquet/crates/cli/src/: boolean_negations.rs  cli_args.rs  config_deps.rs  config_overrides.rs  job_control.rs  lib.rs  list_unit.rs  path_env.rs  pnpm_exec_command.rs  state.rs  with_current.rs
pacquet/crates/cli/tests/: _utils.rs  add.rs  agent_install.rs  approve_builds.rs  audit.rs  bin.rs  bugs.rs  cache.rs  cat_file.rs  cat_index.rs  catalog.rs  completion.rs  config_dependencies.rs  create.rs  custom_fetchers.rs  custom_resolvers.rs  dedupe.rs  dedupe_direct_deps.rs  dedupe_injected_deps.rs  deploy.rs  dlx.rs  docs.rs  dry_run.rs  edit.rs  exec.rs  exec_recursive.rs  fetch.rs  find_hash.rs  global.rs  hoist.rs  hoisted_node_linker.rs  import.rs  init.rs  inject_workspace_packages.rs  install.rs  lifecycle_scripts.rs  link.rs  list.rs  lockfile_only.rs  lockfile_resolution_reuse.rs  (+37 more)
pacquet/crates/cmd-shim/: Cargo.toml
pacquet/crates/cmd-shim/src/: bin_resolver.rs  capabilities.rs  lib.rs  link_bins.rs  path_util.rs  shim.rs
pacquet/crates/config/: Cargo.toml  README.md
pacquet/crates/config-parse-overrides/: Cargo.toml
pacquet/crates/config-parse-overrides/src/: lib.rs  tests.rs
pacquet/crates/config/src/: api.rs  config_types.rs  defaults.rs  env_overlay.rs  env_replace.rs  global_bin_check.rs  lib.rs  matcher.rs  naming_cases.rs  npmrc_auth.rs  pnpm_default_parity.rs  property_path.rs  protected_settings.rs  store_path.rs  tests.rs  version_policy.rs  workspace_yaml.rs
pacquet/crates/crypto-shasums-file/: Cargo.toml
pacquet/crates/crypto-shasums-file/src/: lib.rs  node_release_keys.rs  tests.rs
pacquet/crates/detect-libc/: Cargo.toml  NOTICE  README.md
pacquet/crates/detect-libc/src/: command.rs  elf.rs  filesystem.rs  lib.rs  tests.rs
pacquet/crates/diagnostics/: Cargo.toml
pacquet/crates/diagnostics/src/: lib.rs  local_tracing.rs
pacquet/crates/directory-fetcher/: Cargo.toml
pacquet/crates/directory-fetcher/src/: error.rs  fetcher.rs  lib.rs  walker.rs
pacquet/crates/directory-fetcher/tests/: fetcher.rs
pacquet/crates/engine-runtime-node-resolver/: Cargo.toml
pacquet/crates/engine-runtime-node-resolver/src/: get_node_artifact_address.rs  get_node_mirror.rs  lib.rs  node_resolver.rs  normalize_arch.rs  parse_node_specifier.rs  resolve_node_version.rs
pacquet/crates/env-replace/: Cargo.toml
pacquet/crates/env-replace/src/: lib.rs  tests.rs
pacquet/crates/executor/: Cargo.toml
pacquet/crates/executor/src/: extend_path.rs  lib.rs  lifecycle.rs  make_env.rs  run_script.rs  shell.rs  tests.rs
pacquet/crates/exportable-manifest/: Cargo.toml
pacquet/crates/exportable-manifest/src/: create.rs  lib.rs  replace.rs  tests.rs  transform.rs
pacquet/crates/fs/: Cargo.toml
pacquet/crates/fs-packlist/: Cargo.toml
pacquet/crates/fs-packlist/src/: lib.rs  tests.rs
pacquet/crates/fs/src/: ensure_file.rs  file_mode.rs  is_subdir.rs  lexical_normalize.rs  lib.rs  symlink_dir.rs
pacquet/crates/fs/tests/: ensure_file_stress.rs
pacquet/crates/git-fetcher/: Cargo.toml
pacquet/crates/git-fetcher/src/: cas_io.rs  error.rs  fetcher.rs  lib.rs  packlist.rs  preferred_pm.rs  prepare_package.rs  tarball_fetcher.rs
pacquet/crates/global/: Cargo.toml
pacquet/crates/global/src/: cache_key.rs  check_bin_conflicts.rs  global_package_dir.rs  lib.rs  list.rs  scan.rs
pacquet/crates/hooks/: Cargo.toml
pacquet/crates/hooks/src/: custom_fetcher_adapter.rs  custom_resolver_adapter.rs  finder.rs  lib.rs  node_runtime.rs  worker.rs
pacquet/crates/hooks/tests/: node_hooks.rs
pacquet/crates/lockfile/: Cargo.toml
pacquet/crates/lockfile-preferred-versions/: Cargo.toml
pacquet/crates/lockfile-preferred-versions/src/: lib.rs  tests.rs  version_selector_type.rs
pacquet/crates/lockfile-verification/: Cargo.toml
pacquet/crates/lockfile-verification/src/: cache.rs  errors.rs  hash_lockfile.rs  lib.rs  record_lockfile_verified.rs  verify_lockfile_resolutions.rs
pacquet/crates/lockfile/src/: catalog_snapshots.rs  comver.rs  env_lockfile.rs  freshness.rs  lazy_lockfile.rs  lib.rs  load_lockfile.rs  lockfile_version.rs  package_metadata.rs  pkg_id_with_patch_hash.rs  pkg_name.rs  pkg_name_suffix.rs  pkg_name_ver.rs  pkg_name_ver_peer.rs  pkg_ver_peer.rs  project_snapshot.rs  resolution.rs  resolved_dependency.rs  save_lockfile.rs  serialize_yaml.rs  snapshot_dep_ref.rs  snapshot_entry.rs  yaml_documents.rs  yaml_emit.rs
pacquet/crates/modules-yaml/: Cargo.toml
pacquet/crates/modules-yaml/src/: lib.rs
pacquet/crates/modules-yaml/tests/: fakes.rs  index.rs  real_fs.rs
pacquet/crates/napi/: Cargo.toml  build.rs
pacquet/crates/napi/src/: config.rs  error.rs  hooks.rs  install.rs  lib.rs  napi_runtime_test_stubs.rs  pack.rs  (+2 more)
pacquet/crates/network/: Cargo.toml
pacquet/crates/network-web-auth/: Cargo.toml
pacquet/crates/package-manager/: Cargo.toml  tokens.db
(+12237 files in other folders)
