[workspace]
resolver = "2"
members  = ["pacquet/crates/*", "pacquet/tasks/*"]

[workspace.package]
authors     = ["Yagiz Nizipli <yagiz@nizipli.com"]
description = "Pacquet"
edition     = "2024"
homepage    = "https://github.com/pnpm/pacquet"
keywords    = ["nodejs", "package", "manager", "pnpm", "npm"]
license     = "MIT"
repository  = "https://github.com/pnpm/pacquet"

[workspace.dependencies]
# Crates
pacquet-cli                    = { path = "pacquet/crates/cli" }
pacquet-cmd-shim               = { path = "pacquet/crates/cmd-shim" }
pacquet-fs                     = { path = "pacquet/crates/fs" }
pacquet-registry               = { path = "pacquet/crates/registry" }
pacquet-tarball                = { path = "pacquet/crates/tarball" }
pacquet-testing-utils          = { path = "pacquet/crates/testing-utils" }
pacquet-package-manifest       = { path = "pacquet/crates/package-manifest" }
pacquet-package-manager        = { path = "pacquet/crates/package-manager" }
pacquet-package-is-installable = { path = "pacquet/crates/package-is-installable" }
pacquet-lockfile               = { path = "pacquet/crates/lockfile" }
pacquet-modules-yaml           = { path = "pacquet/crates/modules-yaml" }
pacquet-network                = { path = "pacquet/crates/network" }
pacquet-config                 = { path = "pacquet/crates/config" }
pacquet-executor               = { path = "pacquet/crates/executor" }
pacquet-git-fetcher            = { path = "pacquet/crates/git-fetcher" }
pacquet-diagnostics            = { path = "pacquet/crates/diagnostics" }
pacquet-graph-hasher           = { path = "pacquet/crates/graph-hasher" }
pacquet-store-dir              = { path = "pacquet/crates/store-dir" }
pacquet-reporter               = { path = "pacquet/crates/reporter" }
pacquet-patching               = { path = "pacquet/crates/patching" }
pacquet-real-hoist             = { path = "pacquet/crates/real-hoist" }
pacquet-workspace              = { path = "pacquet/crates/workspace" }

# Tasks
pacquet-registry-mock = { path = "pacquet/tasks/registry-mock" }

# Dependencies
async-recursion = { version = "1.1.1" }
clap = { version = "4", features = ["derive", "string"] }
command-extra = { version = "1.0.0" }
base64 = { version = "0.22.1" }
dashmap = { version = "6.1.0" }
derive_more = { version = "2.1.1", features = ["full"] }
diffy = { version = "0.5.0" }
dunce = { version = "1.0.5" }
home = { version = "0.5.12" }
httpdate = { version = "1.0.3" }
ignore = { version = "0.4.25" }
indexmap = { version = "2.14.0", features = ["serde"] }
insta = { version = "1.47.2", features = ["yaml", "glob", "walkdir"] }
itertools = { version = "0.14.0" }
futures-util = { version = "0.3.32" }
gethostname = { version = "1" }
miette = { version = "7.6.0", features = ["fancy"] }
num_cpus = { version = "1.17.0" }
os_display = { version = "0.1.4" }
reflink-copy = { version = "0.1.29" }
junction = { version = "2.0.0" }
libc = { version = "0.2.185" }
reqwest = { version = "0.13", default-features = false, features = [
  "hickory-dns",
  "json",
  "rustls",
  "socks",
  "stream",
] }
node-semver = { version = "2.2.0" }
pathdiff = { version = "0.2.3" }
pipe-trait = { version = "0.4.0" }
rayon = { version = "1.12.0" }
rmp-serde = { version = "1.3.0" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde-saphyr = { version = "0.0.26" }
# 0.11 removes the LowerHex impl on Output; revisit after upstream/consumers catch up
sha2               = { version = "0.10.9" }
smart-default      = { version = "0.7.1" }
split-first-char   = { version = "2.0.1" }
ssri               = { version = "9.2.0" }
strum              = { version = "0.28.0", features = ["derive"] }
sysinfo            = { version = "0.39.1" }
tar                = { version = "0.4.45" }
text-block-macros  = { version = "0.2.0" }
tracing            = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio              = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
walkdir            = { version = "2.5.0" }
wax                = { version = "0.7.0" }
which              = { version = "8.0.2" }
zip                = { version = "5", default-features = false, features = ["deflate"] }
zune-inflate       = { version = "0.2.54" }

# Dev dependencies
assert_cmd        = { version = "2.2.1" }
chrono            = { version = "0.4.44", default-features = false, features = ["clock"] }
criterion         = { version = "0.8.2", features = ["async_tokio"] }
pretty_assertions = { version = "1.4.1" }
project-root      = { version = "0.2.2" }
tempfile          = { version = "3.27.0" }
mockito           = { version = "1.7.2" }

[workspace.metadata.workspaces]
allow_branch = "main"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
