[workspace]
resolver = "2"
members  = ["pacquet/crates/*", "pacquet/tasks/*", "pnpr/crates/*"]

[workspace.package]
authors     = ["Yagiz Nizipli <yagiz@nizipli.com"]
description = "Pacquet"
edition     = "2024"
homepage    = "https://github.com/pnpm/pacquet"
keywords    = ["nodejs", "package", "manager", "pnpm", "npm"]
license     = "MIT"
repository  = "https://github.com/pnpm/pacquet"

[workspace.dependencies]
# Crates
pacquet-pnpr-client                       = { path = "pacquet/crates/pnpr-client" }
pacquet-catalogs-config                   = { path = "pacquet/crates/catalogs-config" }
pacquet-catalogs-protocol-parser          = { path = "pacquet/crates/catalogs-protocol-parser" }
pacquet-catalogs-resolver                 = { path = "pacquet/crates/catalogs-resolver" }
pacquet-catalogs-types                    = { path = "pacquet/crates/catalogs-types" }
pacquet-cli                               = { path = "pacquet/crates/cli" }
pacquet-cmd-shim                          = { path = "pacquet/crates/cmd-shim" }
pacquet-crypto-hash                       = { path = "pacquet/crates/crypto-hash" }
pacquet-crypto-shasums-file               = { path = "pacquet/crates/crypto-shasums-file" }
pacquet-engine-runtime-bun-resolver       = { path = "pacquet/crates/engine-runtime-bun-resolver" }
pacquet-engine-runtime-deno-resolver      = { path = "pacquet/crates/engine-runtime-deno-resolver" }
pacquet-engine-runtime-node-resolver      = { path = "pacquet/crates/engine-runtime-node-resolver" }
pacquet-env-installer                     = { path = "pacquet/crates/env-installer" }
pacquet-env-replace                       = { path = "pacquet/crates/env-replace" }
pacquet-fs                                = { path = "pacquet/crates/fs" }
pacquet-registry                          = { path = "pacquet/crates/registry" }
pacquet-tarball                           = { path = "pacquet/crates/tarball" }
pacquet-testing-utils                     = { path = "pacquet/crates/testing-utils" }
pacquet-package-manifest                  = { path = "pacquet/crates/package-manifest" }
pacquet-package-manager                   = { path = "pacquet/crates/package-manager" }
pacquet-package-is-installable            = { path = "pacquet/crates/package-is-installable" }
pacquet-lockfile                          = { path = "pacquet/crates/lockfile" }
pacquet-lockfile-preferred-versions       = { path = "pacquet/crates/lockfile-preferred-versions" }
pacquet-lockfile-verification             = { path = "pacquet/crates/lockfile-verification" }
pacquet-modules-yaml                      = { path = "pacquet/crates/modules-yaml" }
pacquet-network                           = { path = "pacquet/crates/network" }
pacquet-config                            = { path = "pacquet/crates/config" }
pacquet-config-dir                        = { path = "pacquet/crates/config-dir" }
pacquet-config-parse-overrides            = { path = "pacquet/crates/config-parse-overrides" }
pacquet-executor                          = { path = "pacquet/crates/executor" }
pacquet-exportable-manifest               = { path = "pacquet/crates/exportable-manifest" }
pacquet-directory-fetcher                 = { path = "pacquet/crates/directory-fetcher" }
pacquet-git-fetcher                       = { path = "pacquet/crates/git-fetcher" }
pacquet-deps-path                         = { path = "pacquet/crates/deps-path" }
pacquet-detect-libc                       = { path = "pacquet/crates/detect-libc" }
pacquet-diagnostics                       = { path = "pacquet/crates/diagnostics" }
pacquet-graph-hasher                      = { path = "pacquet/crates/graph-hasher" }
pacquet-hooks                             = { path = "pacquet/crates/hooks" }
pacquet-store-dir                         = { path = "pacquet/crates/store-dir" }
pacquet-reporter                          = { path = "pacquet/crates/reporter" }
pacquet-patching                          = { path = "pacquet/crates/patching" }
pacquet-real-hoist                        = { path = "pacquet/crates/real-hoist" }
pacquet-resolving-default-resolver        = { path = "pacquet/crates/resolving-default-resolver" }
pacquet-resolving-deps-resolver           = { path = "pacquet/crates/resolving-deps-resolver" }
pacquet-resolving-git-resolver            = { path = "pacquet/crates/resolving-git-resolver" }
pacquet-resolving-jsr-specifier-parser    = { path = "pacquet/crates/resolving-jsr-specifier-parser" }
pacquet-resolving-local-resolver          = { path = "pacquet/crates/resolving-local-resolver" }
pacquet-resolving-npm-resolver            = { path = "pacquet/crates/resolving-npm-resolver" }
pacquet-resolving-parse-wanted-dependency = { path = "pacquet/crates/resolving-parse-wanted-dependency" }
pacquet-resolving-resolver-base           = { path = "pacquet/crates/resolving-resolver-base" }
pacquet-resolving-tarball-resolver        = { path = "pacquet/crates/resolving-tarball-resolver" }
pacquet-workspace                         = { path = "pacquet/crates/workspace" }
pacquet-workspace-manifest-writer         = { path = "pacquet/crates/workspace-manifest-writer" }
pacquet-workspace-projects-filter         = { path = "pacquet/crates/workspace-projects-filter" }
pacquet-workspace-projects-graph          = { path = "pacquet/crates/workspace-projects-graph" }
pacquet-workspace-range-resolver          = { path = "pacquet/crates/workspace-range-resolver" }
pacquet-workspace-spec                    = { path = "pacquet/crates/workspace-spec" }
pacquet-workspace-state                   = { path = "pacquet/crates/workspace-state" }

# Tasks
pacquet-registry-mock = { path = "pacquet/tasks/registry-mock" }

# Registry (sibling project — pnpm-compatible registry server)
pnpr          = { path = "pnpr/crates/pnpr" }
pnpr-fixtures = { path = "pnpr/crates/pnpr-fixtures" }

# Dependencies
async-recursion = { version = "1.1.1" }
async-trait = { version = "0.1.83" }
axum = { version = "0.8.7", default-features = false, features = [
  "http1",
  "tokio",
  "json",
  "matched-path",
  "original-uri",
] }
clap = { version = "4", features = ["derive", "string"] }
command-extra = { version = "1.0.0" }
base64 = { version = "0.22.1" }
bcrypt = { version = "0.19.1" }
bytes = { version = "1.11.0" }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
dashmap = { version = "6.2.1" }
derive_more = { version = "2.1.1", features = ["full"] }
dialoguer = { version = "0.11.0", default-features = false }
diffy = { version = "0.5.0" }
dunce = { version = "1.0.5" }
home = { version = "0.5.12" }
httpdate = { version = "1.0.3" }
ignore = { version = "0.4.25" }
indexmap = { version = "2.14.0", features = ["serde"] }
insta = { version = "1.47.2", features = ["yaml", "glob", "walkdir"] }
itertools = { version = "0.14.0" }
libsql = { version = "0.9.30", default-features = false, features = ["core", "remote", "replication"] }
futures-util = { version = "0.3.32" }
flate2 = { version = "1.1.9" }
gethostname = { version = "1" }
getrandom = { version = "0.4.2" }
miette = { version = "7.6.0", features = ["fancy"] }
num_cpus = { version = "1.17.0" }
object_store = { version = "0.12", features = ["aws"] }
os_display = { version = "0.1.4" }
owo-colors = { version = "4", features = ["supports-colors"] }
reflink-copy = { version = "0.1.29" }
junction = { version = "2.0.0" }
libc = { version = "0.2.186" }
reqwest = { version = "0.13", default-features = false, features = [
  "gzip",
  "hickory-dns",
  "json",
  "rustls",
  "socks",
  "stream",
] }
node-semver = { version = "2.2.0" }
pathdiff = { version = "0.2.3" }
pipe-trait = { version = "0.4.0" }
pgp = { version = "0.19.0", default-features = false }
rayon = { version = "1.12.0" }
rmp-serde = { version = "1.3.0" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "raw_value"] }
serde-saphyr = { version = "0.0.27" }
# 0.11 removes the LowerHex impl on Output; revisit after upstream/consumers catch up
sha2               = { version = "0.10.9" }
smart-default      = { version = "0.7.1" }
split-first-char   = { version = "2.0.1" }
ssri               = { version = "9.2.0" }
strum              = { version = "0.28.0", features = ["derive"] }
sysinfo            = { version = "0.39.2" }
tabled             = { version = "0.20" }
tar                = { version = "0.4.46" }
text-block-macros  = { version = "0.2.0" }
tower              = { version = "0.5.3" }
tower-http         = { version = "0.6.11", features = ["compression-gzip", "trace"] }
tracing            = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio              = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "signal", "sync"] }
walkdir            = { version = "2.5.0" }
yaml_serde         = { version = "0.10.4" }
yamlpatch          = { version = "1.25.2" }
yamlpath           = { version = "1.25.2" }
wax                = { version = "0.7.0" }
which              = { version = "8.0.2" }
zip                = { version = "8", default-features = false, features = ["deflate"] }
zune-inflate       = { version = "0.2.54" }

# Dev dependencies
assert_cmd        = { version = "2.2.2" }
criterion         = { version = "0.8.2", features = ["async_tokio"] }
pretty_assertions = { version = "1.4.1" }
project-root      = { version = "0.2.2" }
tempfile          = { version = "3.27.0" }
mockito           = { version = "1.7.2" }

[workspace.metadata.workspaces]
allow_branch = "main"

# Declares the `dylint_lib = "perfectionist"` cfg used by the
# `cfg_attr(dylint_lib = "perfectionist", feature(register_tool))` /
# `register_tool(perfectionist)` lines at each pacquet crate's root.
# Those `cfg_attr`s register the perfectionist tool name under dylint's
# nightly toolchain (so `#[expect(perfectionist::lint, reason = "...")]`
# at use sites compiles cleanly without a wrapper); this `check-cfg`
# entry tells stable `cargo check` that the cfg name is expected even
# though it's never set off-dylint.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("perfectionist"))'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

doc_link_with_quotes                      = "allow" # false positive: matches markdown link titles
unreadable_literal                        = "allow" # false positive: octal file modes
case_sensitive_file_extension_comparisons = "allow" # extension checks are intentionally case-sensitive
implicit_hasher                           = "allow" # only matters across a public API
unnecessary_debug_formatting              = "allow" # keeps the quoted `Path` output
option_option                             = "allow" # distinguishes missing from null
cast_possible_truncation                  = "allow" # deliberate numeric narrowing
cast_sign_loss                            = "allow"
cast_possible_wrap                        = "allow"
cast_precision_loss                       = "allow"
missing_errors_doc                        = "allow" # error enums are self-documenting (#[display] + #[diagnostic(code)]); a # Errors section would just restate them
missing_panics_doc                        = "allow" # deferred: refactor away / document / #[expect] each panic before enabling
too_many_lines                            = "allow" # pacquet mirrors pnpm's function decomposition
struct_excessive_bools                    = "allow" # option structs mirror pnpm's
fn_params_excessive_bools                 = "allow" # mirrors pnpm's option parameters
match_same_arms                           = "allow" # arms kept explicit to mirror pnpm's switch cases
unnecessary_wraps                         = "allow"
unused_async                              = "allow" # deferred: audit each async signature (trait/seam-required?) before enabling
similar_names                             = "allow" # names ported verbatim from pnpm
items_after_statements                    = "allow"
needless_continue                         = "allow"
many_single_char_names                    = "allow" # perfectionist's single_letter_* lints already cover this with finer per-position control

# nursery-group opt-outs (the group is experimental; these lints are either
# false positives on this code or fight conventions the project keeps on purpose)
use_self                            = "allow" # spelling out the concrete type name over Self is left to author discretion
too_long_first_doc_paragraph        = "allow" # doc comments deliberately open with a detailed pnpm-parity summary, not a one-line lede
missing_const_for_fn                = "allow" # const-ness is a forward semver commitment and this nursery lint is noisy / churns as const-eval grows
option_if_let_else                  = "allow" # the suggested map_or_else closures read worse than the if-let they replace
significant_drop_tightening         = "allow" # the flagged guards are held deliberately (atomic check-then-act); early-dropping is FP-prone and behavioral
redundant_pub_crate                 = "allow" # pub(crate) is kept to document intended visibility even where technically redundant
derive_partial_eq_without_eq        = "allow" # deriving Eq is a forward semver commitment that all fields stay Eq
branches_sharing_code               = "allow" # false-positive-prone: clippy itself flags its own suggestion as needing adjustment
useless_let_if_seq                  = "allow" # rewrites large init blocks into an awkward if-as-expression
single_option_map                   = "allow" # flags test helpers that exist precisely to dedupe a `.map` over an Option
iter_with_drain                     = "allow" # false positive: drain(..) reuses the batch Vec's allocation across loop iterations; into_iter() would consume it
literal_string_with_formatting_args = "allow" # false positive: `${VAR:-default}` strings are .npmrc / env-replace fixtures, not Rust format args
collection_is_never_read            = "allow" # false positive: the flagged Vec owns sockets to keep them alive, it is never meant to be read

# restriction lints opted into individually — not part of any default group or
# the nursery group, so these lines are what enable them (kept on purpose).
clone_on_ref_ptr       = "warn"
if_then_some_else_none = "warn"
mod_module_files       = "warn" # forbids mod.rs, enforcing the flat module.rs layout (see CODE_STYLE_GUIDE.md)

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"   # Let it crash and force ourselves to write safe Rust.

# Use the `--profile release-debug` flag to show symbols in release mode.
# e.g. `cargo build --profile release-debug`
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true
