[package]
name = "pnpm-cafs-writer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
rayon = "1"
crossbeam-channel = "0.5"
# sync HTTP + gzip for fetch_batch. HTTP-only is enough for the local/internal
# agent; remote HTTPS is a follow-up (enable ureq's rustls feature).
ureq = { version = "2", default-features = false }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
