[package]
name                  = "pacquet-auth-commands"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-network  = { workspace = true }
pacquet-reporter = { workspace = true }

derive_more = { workspace = true }
miette      = { workspace = true }
reqwest     = { workspace = true }

[dev-dependencies]
mockito  = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true }

[lints]
workspace = true
