[package]
name                  = "pacquet-auth-commands"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-fs               = { workspace = true }
pacquet-network          = { workspace = true }
pacquet-network-web-auth = { workspace = true }
pacquet-reporter         = { workspace = true }

derive_more = { workspace = true }
dialoguer   = { workspace = true, features = ["password"] }
miette      = { workspace = true }
reqwest     = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["rt"] }
url         = { workspace = true }

[dev-dependencies]
pacquet-network-web-auth-testing = { workspace = true }

mockito            = { workspace = true }
pretty_assertions  = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
