[package]
name                  = "pacquet-catalogs-resolver"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-catalogs-protocol-parser = { workspace = true }
pacquet-catalogs-types           = { workspace = true }

derive_more = { workspace = true }
miette      = { workspace = true }

[lints]
workspace = true
